# sim4-w-strip

./: README.md
documentation/: Doxyfile  Makefile  README.md
macro/: draw.C  gamma.mac  gamma_test.mac  vis.mac  vis_geom.mac
source/: CMakeLists.txt  main.cpp
source/action_initialization/: ActionInitialization.cpp  ActionInitialization.hpp  AnalysisManager.cpp  AnalysisManager.hpp  CMakeLists.txt  EventAction.cpp  EventAction.hpp  PrimaryGeneratorAction.cpp  PrimaryGeneratorAction.hpp  RunAction.cpp  SteppingAction.cpp
source/detector_construction/: DetectorConstruction.cpp  DetectorConstruction.hpp  HitsCollection.cpp  HitsCollection.hpp  SensitiveDetector.cpp  SensitiveDetector.hpp
source/physics_list/: CMakeLists.txt  PhysicsConstructor.cpp  PhysicsConstructor.hpp  PhysicsList.cpp  PhysicsList.hpp
source/user_interface/: CMakeLists.txt  UImessenger.cpp  UImessenger.hpp
